assets/css/main.css
/* ------------------------------------------------------------------
	Original theme by astroon
	Versiom: 1.0.0
	Year: 2019
	Contact: astroonthemes@gmail.com
	Thank you for your purchase!
	---------------------------------------------------------------- */
/* -----------------------------------------------------------------------
    Modified site by Prasuna Kunasani
    Last Modified date: Oct 4th, 2021 at 2:53 PM
----------------------------------------------------------------------- */
body {
    margin: 0;
    padding: 0;
    font-family: open-sans, sans-serif;
    overflow-x: hidden;
}

section {
    overflow: hidden;
}

div {
    box-sizing: border-box;
}

::-moz-selection {
    color: #fff;
    background: #eb9412;
}

::selection {
    color: #fff;
    background: #eb9412;
}

h1,
h2,
h3,
h4,
h5,
h6,
p,
ul {
    margin: 0;
    padding: 0;
}

h2 {
    font-family: "Unna";
    font-size: 40px;
    font-weight: 700;
    color: rgba(0, 0, 0, 0.9);
    line-height: 52px;
}

h3 {
    font-family: "Unna";
    font-size: 26px;
    color: rgba(0, 0, 0, 0.9);
}

p {
    font-size: 16px;
    color: rgba(0, 0, 0, 0.65);
    font-weight: 400;
    line-height: 27px;
}

.text_color {
    color: #eb9412;
}

/* Buttons */
.button_line,
.button_fill {
    text-decoration: none;
    color: rgba(0, 0, 0, 0.9);
    font-size: 16px;
    border: 2px solid #eb9412;
    padding: 15px 40px;
    display: inline-block;
    border-radius: 8px;
    -webkit-transition: 0.3s;
    transition: 0.3s;
    position: relative;
    overflow: hidden;
    cursor: pointer;
}

.button_line::after,
.button_line::before,
.button_fill::after,
.button_fill::before {
    content: "";
    position: absolute;
    display: block;
    height: 100px;
    width: 80px;
    background: url("../img/icons/hover_button.svg") no-repeat center top;
    -webkit-transition: 0.3s;
    transition: 0.3s;
    opacity: 0.5;
}

.button_line::after,
.button_line::before {
    opacity: 0;
}

.button_line::after {
    right: -65px;
    top: -10px;
}

.button_line::before {
    left: -65px;
    top: -5px;
}

.button_fill::after {
    right: -55px;
    top: -10px;
}

.button_fill::before {
    left: -55px;
    top: -5px;
}

.button_line:hover {
    color: #fff;
    background: #eb9412;
}

.button_line:hover:after,
.button_fill:hover:after,
.button_line:hover:before,
.button_fill:hover:before {
    opacity: 0.5;
}

.button_line:hover:after {
    -webkit-transform: translate(-10px, 0);
    transform: translate(-10px, 0);
}

.button_fill:hover:after {
    -webkit-transform: translate(10px, 0);
    transform: translate(10px, 0);
}

.button_line:hover:before {
    -webkit-transform: translate(10px, 0);
    transform: translate(10px, 0);
}

.button_fill:hover:before {
    -webkit-transform: translate(-10px, 0);
    transform: translate(-10px, 0);
}

.button_fill {
    background: #eb9412;
    color: #fff;
    -webkit-transition: 0.3;
    transition: 0.3;
}

.button_fill:hover {
    background: none;
    border: 2px solid #eb9412;
    color: #000;
}

.whiteColour {
    color: white;
}

.lonelyGFIconSize {
    width: 1.4em;
    height: 1.4em;
}


.withLeafGFIconSize {
    width: 1.1em;
    height: 1.1em;
}

/*  Header - home 1 */
header {
    background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.65)), to(rgba(0, 0, 0, 0.65)));
    background: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65));
    width: 100%;
    position: relative;
}

header.home {
    height: 100vh;
}

header.home .container {
    position: relative;
}

header.home .flex_center {
    height: 100vh;
    padding-bottom: 100px;
}

#menu_icon {
    display: none;
    top: calc(50% - 8px);
    right: 25px;
}

.logo {
    font-size: 0px;
    display: block;
}

.logo img {
    height: 90px;
}

.up_i {
    font-size: 14px;
    text-transform: uppercase;
    letter-spacing: 8px;
}

.l_m_global {
    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
    position: absolute;
    width: 100%;
    z-index: 998;
}

.l_m {
    display: -webkit-box;
    display: flex;
    -webkit-box-align: center;
    align-items: center;
    -webkit-box-pack: justify;
    justify-content: space-between;
    height: 120px;
    position: relative;
}

nav {
    margin: 0;
    padding: 0;
}

.menu {
    display: -webkit-box;
    display: flex;
    -webkit-box-align: center;
    align-items: center;
    height: 100%;
}

.menu i {
    color: #fff;
    margin-left: 35px;
    font-size: 16px;
    -webkit-transition: 0.3s;
    transition: 0.3s;
}

.menu i:hover {
    color: #eb9412;
}

.menu i:hover span {
    color: #fff;
}

.menu a {
    color: #fff;
    font-size: 16px;
    text-decoration: none;
    -webkit-transition: 0.3s;
    transition: 0.3s;
}

.menu a:first-child {
    margin-left: 0px;
}

.menu a:hover {
    color: #eb9412;
    cursor: pointer;
}

.menu .button_line:hover {
    color: #fff;
}

.menu li {
    margin-left: 30px;
    list-style: none;
    height: 100%;
    display: -webkit-box;
    display: flex;
    -webkit-box-align: center;
    align-items: center;
}

.menu li:first-child {
    margin-left: 0px;
}

.menu li .sub_menu li {
    margin-left: 0px;
    padding: 15px 20px;
    height: auto;
    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
}

.menu li .sub_menu li:last-child {
    border-bottom: none;
}

.menu li .sub_menu li a {
    color: #000;
    font-size: 15px;
}

.menu li .sub_menu li:hover a {
    color: #eb9412;
}

.menu li:not(.menu_mega) {
    position: relative;
}

.menu li.active {
    border-bottom: 2px solid #eb9412;
}

.menu_mega .sub_menu .sub_s_m h5 {
    font-size: 18px;
    padding: 20px 20px;
    padding-bottom: 10px;
    color: #eb9412;
    font-weight: 400;
}

.flex_center {
    display: -webkit-box;
    display: flex;
    -webkit-box-pack: center;
    justify-content: center;
    -webkit-box-align: center;
    align-items: center;
    height: 100%;
}
/* ... */

